# react-native-librespot

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Librespot.podspec  README.md  package.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
android/src/main/java/com/librespot/: LibrespotModule.kt  LibrespotPackage.kt  LibrespotUtils.kt
android/src/main/java/xyz/gianlu/librespot/android/: Utils.java
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/LibrespotExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/LibrespotExample.xcodeproj/: project.pbxproj
example/ios/LibrespotExample.xcodeproj/xcshareddata/xcschemes/: LibrespotExample.xcscheme
example/ios/LibrespotExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: CoreError+Error.swift  Librespot.h  Librespot.mm  LibrespotError+Error.swift  LibrespotModule.h  LibrespotModule.mm  LibrespotModule.swift  LibrespotPlayerEvents.swift  LibrespotWrapper.swift  build_librespotswift.sh  build_rust.sh
ios/rust/: .gitignore  Cargo.toml  Makefile  build.rs  build.sh  clean.sh  rebuild.sh  rust-toolchain.toml
ios/rust/src/: lib.rs
src/: NativeLibrespot.ts  index.tsx
(+2 files in other folders)
