[package]
name = "react_native_librespot"
version = "0.1.0"
authors = ["Luis Finke <luisfinke@gmail.com>"]
edition = "2021"

build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = { version = "0.1", features = ["async"] }
librespot = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.214"
